# NovaLang

./: .gitignore  Cargo.toml  Licence  Readme.md  bytecode specs.md
examples/: simple_globals.rs  simple_locals.rs  simple_loop.rs  simple_math.rs
src/: bytecode.rs  cache.rs  compiler.rs  debug.rs  file.rs  frame.rs  instruction.rs  lib.rs  machine.rs  main.rs  natives.rs  object.rs  program.rs  register.rs  tests.rs  version.rs
src/compiler/: generator.rs
src/machine/: bytecode_execution.rs  garbage_collection.rs  memory_management.rs  program_management.rs  register_management.rs
src/machine/bytecode_execution/: arithmetic_operations.rs  string_operations.rs
test_code/: error_printing.nova  fib_recurse.nova  function.nova  function2.nova  function3.nova  global_vars.nova  local_vars.nova  loop.nova  loop_func.nova  native_calls.nova  recurse.nova  test_gc.nova  while_loop.nova
