[package]
name = "nova"
version = "0.3.0"
edition = "2021"

[profile.release] 
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []
verbose = ["debug", "dbg_memory"]
dbg_memory = ["dbg_local", "dbg_global"]
dbg_local = ["debug"]
dbg_global = ["debug"]
dbg_code = ["debug"]
dbg_step = ["dbg_local", "dbg_code"]


[dependencies]
byteorder = "1.5.0"
memuse = "0.2.1"
nova_tw = {git = "https://github.com/TimothyKandiado/NovaLang-TW"}
