[package]
name = "nova"
version = "0.4.1"
edition = "2021"

[profile.dev]
opt-level = 1
codegen-units = 16

[profile.release] 
debug = true
opt-level = 3
overflow-checks = false
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []
verbose = ["debug", "dbg_memory", "dbg_code"]
dbg_memory = ["dbg_local", "dbg_global"]
dbg_local = ["debug"]
dbg_global = ["debug"]
dbg_code = ["debug"]
dbg_step = ["dbg_local", "dbg_code"]



[dependencies]
byteorder = "1.5.0"
chrono = "0.4.38"
memuse = "0.2.1"
nova_tw = {git = "https://github.com/TimothyKandiado/NovaLang-TW"}
rustc-hash = "2.0.0"
